--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="login_failed">"Login failed"</string>
     <string name="register">Register Account</string>
     <string name="todo">TODO</string>
+    <string name="btn_add_book_submit">Submit</string>
 </resources>
